fix: dashboard visualization card header not responsive

--- a/src/app/main/home/dashboards/dashboards.component.scss
+++ b/src/app/main/home/dashboards/dashboards.component.scss
@@ -33,3 +33,7 @@
     font-size: 13px;
   }
 }
+
+.d-content {
+  display: contents;
+}
